--- a/progeny_root/core/config.json
+++ b/progeny_root/core/config.json
@@ -4,7 +4,7 @@
     "id": "progeny-local-01",
     "owner": "Creator",
     "log_level": "INFO",
-    "environment": "production"
+    "test_mode": true
   },
   "paths": {
     "whitelist": [
