--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,51 +45,9 @@ jobs:
     - name: Lint
       run: |
         cd progeny_root
-        pip install ruff black mypy
-        if command -v ruff &> /dev/null; then
-          ruff check core/ || echo "⚠️  Ruff found issues (non-blocking)"
-        fi
-        if command -v black &> /dev/null; then
-          black --check core/ || echo "⚠️  Black found formatting issues (non-blocking)"
-        fi
-        if command -v mypy &> /dev/null; then
-          mypy core/ --ignore-missing-imports || echo "⚠️  MyPy found type issues (non-blocking)"
-        fi
-      continue-on-error: true
-
-  build-web:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-    
-    - name: Install dependencies
-      run: |
-        cd web
-        npm ci || npm install
-    
-    - name: Lint
-      run: |
-        cd web
-        npm run lint || echo "✓ Lint check skipped (no issues or not configured)"
-      continue-on-error: true
-    
-    - name: Type check
-      run: |
-        cd web
-        npx tsc --noEmit || echo "✓ TypeScript check skipped"
-      continue-on-error: true
-    
-    - name: Build
-      run: |
-        cd web
-        npm run build || echo "✓ Build check skipped (requires environment variables)"
-      continue-on-error: true
+        ruff check core/
+        black --check core/
+        mypy core/ --ignore-missing-imports
 
   lint-mobile:
     runs-on: ubuntu-latest
@@ -105,19 +63,17 @@ jobs:
     - name: Install dependencies
       run: |
         cd mobile
-        npm ci || npm install
+        npm ci
     
     - name: Lint
       run: |
         cd mobile
-        npm run lint || echo "✓ Lint check skipped (no issues or not configured)"
-      continue-on-error: true
+        npm run lint
     
     - name: Type check
       run: |
         cd mobile
-        npx tsc --noEmit || echo "✓ TypeScript check skipped"
-      continue-on-error: true
+        npx tsc --noEmit
 
   security:
     runs-on: ubuntu-latest
@@ -138,7 +94,7 @@ jobs:
     - name: Check dependencies
       run: |
         cd progeny_root
-        safety check -r requirements.txt || echo "Safety check completed with warnings"
+        safety check -r requirements.txt
     
     - name: Bandit security scan
       run: |
@@ -148,7 +104,6 @@ jobs:
   build-mobile:
     runs-on: ubuntu-latest
     needs: [lint-mobile]
-    if: false  # Disabled - requires Android SDK and macOS for iOS
     
     steps:
     - uses: actions/checkout@v3
@@ -177,8 +132,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]  # Limited to Linux for CI, full builds done locally
-      fail-fast: false
+        os: [windows-latest, ubuntu-latest, macos-latest]
     
     steps:
     - uses: actions/checkout@v3
@@ -191,16 +145,10 @@ jobs:
     - name: Install dependencies
       run: |
         cd desktop
-        npm ci || npm install
-    
-    - name: Lint
-      run: |
-        cd desktop
-        npm run lint || npx eslint . || echo "✓ Lint check skipped (no issues or not configured)"
-      continue-on-error: true
+        npm ci
     
     - name: Build
       run: |
         cd desktop
-        npm run build || echo "✓ Build check skipped (requires additional setup)"
-      continue-on-error: true
+        npm run build || echo "Build requires additional setup"
+
