Add test helpers, unify core, and enhance kinship/degradation
Introduces test helper functions and Pydantic models in device_management, push_notifications, sync_conflict, sync_encryption, and sync_state modules. Refactors kinship system for single-soul mode with per-user behavioral profiles in both Companion and Peer. Enhances degradation system with compatibility shims and behavior mapping. Adds unified core package (__init__.py) for import bridging, updates pytest config and conftest for multi-package test discovery, and minor CI workflow tweak.

--- a/progeny_root/pytest.ini
+++ b/progeny_root/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-testpaths = tests
+testpaths =
+    Peer/tests
+    Companion/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
