--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Run tests
       run: |
         cd progeny_root
-        pytest tests/ --cov=core --cov-report=xml --cov-report=html
+        pytest --cov=core --cov-report=xml --cov-report=html
     
     - name: Upload coverage
       uses: codecov/codecov-action@v3
