feat: consolidate desktop apps - Phase 1 WebView2 integration
- Add WebView2 NuGet package to SallieStudioApp
- Replace TabView navigation with WebView2 for web app embedding
- Create NativeBridge for JavaScript-C# interop
- Add native bridge TypeScript module for web app
- Add useNativeBridge React hook
- Update MainWindow to Sallies Home with toolbar, plugins panel, status bar
- Keep native features: plugins, cloud sync, tray, dev console, setup wizard
- Add consolidation plan document

This consolidation merges the Electron desktop app and SallieStudioApp (WinUI)
into a single Windows desktop app that:
- Uses the web app UI via WebView2 (same look as web)
- Retains all native SallieStudioApp features
- Provides seamless JS-C# bridge communication

Part of desktop consolidation - Phase 1 of 5

--- a/SallieStudioApp/SallieStudioApp.csproj
+++ b/SallieStudioApp/SallieStudioApp.csproj
@@ -14,7 +14,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.0-preview1" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2592.51" />
     <PackageReference Include="System.Security.Permissions" Version="6.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
