--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "detox test",
+    "test:e2e:build": "detox build --configuration ios.sim.debug",
+    "test:e2e:android": "detox test --configuration android.emu.debug",
+    "test:e2e:ios": "detox test --configuration ios.sim.debug",
     "lint": "eslint .",
     "build:android": "react-native build-android --mode=release",
     "build:ios": "react-native build-ios --mode=Release"
@@ -56,7 +62,13 @@
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@testing-library/react-native": "^12.4.0",
+    "@testing-library/jest-native": "^5.4.0",
+    "@testing-library/user-event": "^14.5.0",
+    "detox": "^20.10.0",
+    "@types/jest": "^29.5.0",
+    "react-native-testing-library": "^6.0.0"
   },
   "engines": {
     "node": ">=18"
