--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,8 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
     "framer-motion": "^10.16.0",
-    "recharts": "^2.10.0"
+    "recharts": "^2.10.0",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
